# my-first-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  RAILWAY.md  SECURITY.md  TROUBLESHOOTING.md
scripts/: dev.sh
src/assistant_bot/: config.py  configure_token.py  logging.py  main.py  smoke.py
src/assistant_bot/agents/: factory.py
src/assistant_bot/db/: models.py  session.py
src/assistant_bot/services/: auth.py  files.py  projects.py  tasks.py
src/assistant_bot/telegram/: app.py  verify.py
src/assistant_bot/tools/: workspace.py
tests/: test_acceptance.py
